[gd_scene load_steps=12 format=3 uid="uid://d3nkisygwt48"]

[ext_resource type="Texture2D" uid="uid://gi4arhscbw1i" path="res://assets/grass.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://c0m78ssbm0keq" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://3wnuivb7arim" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cc3c44gxts6nn" path="res://coin.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://buphg782ilt82" path="res://cactus.tscn" id="4_efxa6"]
[ext_resource type="PackedScene" uid="uid://bmu608iymm43o" path="res://hud.tscn" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://bosv6oibatec0" path="res://assets/audio/Coin.wav" id="6_5vw27"]
[ext_resource type="AudioStream" uid="uid://ddg0h0h4ne7ov" path="res://assets/audio/Level.wav" id="7_kek77"]
[ext_resource type="AudioStream" uid="uid://bknckabbok24p" path="res://assets/audio/EndSound.wav" id="8_4c57u"]
[ext_resource type="AudioStream" uid="uid://dvln4coiybbqa" path="res://assets/audio/Powerup.wav" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://duv0fnmlrpu4w" path="res://powerup.tscn" id="10_4c57u"]

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
coin_scene = ExtResource("2_1bvp3")
powerup_scene = ExtResource("10_4c57u")
cactus_scene = ExtResource("4_efxa6")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0xm2m")
stretch_mode = 1

[node name="GameTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5vw27")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kek77")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4c57u")

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kek77")

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
