[gd_scene load_steps=7 format=3 uid="uid://dne6dnomvj6e6"]

[ext_resource type="Script" uid="uid://bv640myfektu1" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://biswfgpiljpw6" path="res://assets/space_background.png" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dmcd0idufxg7i" path="res://player/player.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://c6pdlh6np5veh" path="res://rock/rock.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dtmnbohp6yjov" path="res://hud.tscn" id="5_lquwl"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0)
}
point_count = 5

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_h2yge")
rock_scene = ExtResource("2_1bvp3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(959, 538)
texture = ExtResource("1_ig7tw")

[node name="Player" parent="." instance=ExtResource("2_0xm2m")]

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]
position = Vector2(1152, 0)
rotation = 1.5708

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="lives_changed" from="Player" to="HUD" method="update_lives"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
